# simple-scaler

./: CMakeLists.txt  readme.md  simple-scaler.cpp
cmake/: quickmpiConfig.cmake
cmake/mpi/: probe.c
